# UptaCamp

./: # Code Citations.md  .env.example  .gate_black.txt  .gate_mypy.txt  .gate_pytest.txt  .gate_ruff.txt  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Pipfile  README.md  README_font_8bit.txt  README_font_instructions.txt  adapter.py  ai_strategy.py  animations.py  app_context.py  asset_manager.py  audio_manager.py  batch_convert_svg_to_png.js  bert_agent.py  bert_model.pkl  bert_persona.py  build_windows.ps1  cards.py  convert_card_assets.py  cribbage_engine.py  cribbage_pygame.py  docker-compose.yml  engine.py  game_checkpoint.json  game_state.py  main.py  online_api_server.py  (+17 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  headless-smoke.yml
CRIBacup/: backup_instructions.txt  cribbage_pygame.py
UptaStart_UIBackup/: cards.py  cribbage_pygame.py
assets/: maine_shape.py  woodland_colors.py
cribbage_game/: icon.svg.import  project.godot
data/bert_voice/: README.md  barnabas_lines.json  eval_prompts_seed.jsonl  event_mood_matrix.yaml  generator_config.json  gold_lines_seed.jsonl  lexicon.yaml  negative_lines_seed.jsonl  parameter_rubric.yaml  repetition_policy.yaml  sources.yaml  thematic_mapping.yaml
docs/: DEPLOY_ONLINE.md  MIGRATION_PLAN.md  PLAN_ALIGNMENT_STATUS.md  RELEASE_v1.0.0.md  RELEASE_v1.1.0-beta.md  REPO_HYGIENE.md  architecture.md  bert_and_i_authenticity_reference.md  bert_dialog_lanes.md  training_protocol.md
player_profiles/: Joe.json  Playe.json  Player.json
src/: __init__.py  compat.py
src/controllers/: __init__.py  game_controller.py
src/input/: __init__.py  event_handler.py
src/renderer/: __init__.py  animation_manager.py  board_renderer.py  intro_controls_renderer.py  settings_modal_renderer.py
src/utils/: __init__.py  asset_loader.py
states/: __init__.py  base.py  deal.py  high_scores.py  intro.py  online_login.py  online_match.py  online_menu.py  p2p_lobby.py  p2p_match.py
tests/: __init__.py  test_ai_strategy.py  test_animation_manager.py  test_asset_loader.py  test_bert_persona.py  test_cards_pegging_scoring.py  test_cribbage_engine_orchestrator.py  test_deal_state_auto_go.py  test_engine.py  test_engine_adapter.py  test_event_handler.py  test_game_controller.py  test_game_logic.py  test_game_state.py  test_game_state_model.py  test_intro_state_voice.py  test_main_entrypoint.py  test_online_api_server.py  test_online_backend.py  test_online_e2e_match.py  test_online_frontend_states.py  test_online_match_action_picker.py  test_online_ws_server.py  test_p2p_integration.py  test_phase_states_logic.py  test_phase_transitions.py  test_scoring.py  test_scoring_vectors.py  test_settings_manager.py  test_stats_manager.py  test_voice_manager.py
tools/: _preview_shape.py  benchmark_ai_levels.py  capture_beta_screenshots.py  check_bert_voice_prereqs.py  convert_all_svg_to_png.py  convert_card_assets.py  convert_svg_to_png.py  convert_svg_to_png_inkscape.py  dev_autorestart_main.py  export_bot_telemetry.py  full_runtime_smoke.py  generate_layout_mockups.py  prepare_bert_voice_samples.py  quick_calibrate_levels.py  self_play_ladder.py  soak_20_games.py  train_barnabas.py  train_bert.py  ui_monkey_smoke.py
ui/: renderer.py  sprites.py
