[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uptacamp"
version = "1.0.0"
description = "A fun, interactive Cribbage card game built with Python and Pygame"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Joseph Giardello", email = "josephgiardello-cloud@example.com"}
]
keywords = ["cribbage", "card-game", "pygame", "ai", "game"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Fortune Cookies",
]
requires-python = ">=3.10"
dependencies = [
    "pygame>=2.4.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.287",
    "mypy>=1.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/josephgiardello-cloud/UptaCamp"
Documentation = "https://github.com/josephgiardello-cloud/UptaCamp#readme"
Repository = "https://github.com/josephgiardello-cloud/UptaCamp.git"
"Bug Tracker" = "https://github.com/josephgiardello-cloud/UptaCamp/issues"

[project.scripts]
uptacamp = "main:main"
uptacamp-online-api = "online_api_server:main"
uptacamp-online-ws = "online_ws_server:main"

[tool.setuptools]
py-modules = [
    "adapter",
    "ai_strategy",
    "animations",
    "app_context",
    "asset_manager",
    "audio_manager",
    "cards",
    "cribbage_engine",
    "cribbage_pygame",
    "engine",
    "game_state",
    "main",
    "online_api_server",
    "online_backend",
    "online_client",
    "online_ws_server",
    "phase_states",
    "stats_manager",
    "settings_manager",
]

[tool.setuptools.packages.find]
include = ["states"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "E203",  # whitespace before ':'
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/__main__.py",
    "setup.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
